Fix ch08: replace List.of(null) with Arrays.asList for null-safe lists
List.of() rejects null elements (throws NPE at runtime).
Arrays.asList() permits nulls — used where null is a test case.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>